Update Facebook iframe and anchors
TODO: Add support for Opera

--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
 
                     <p><b>Note:</b> These solutions are for review purposes only. The solutions represent one way to solve the problems and the point of these solutions is to provide better understanding of the concepts. If you are utilizing these solutions solely for the answers, you are missing the point. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com. Please be specific on why you feel an answer may be wrong.<br/></p>
                     <h3>Electrical Network Analysis</h3>
-                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW1&2.pdf" class="button">ENA Homework1&2 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW3.pdf" class="button">ENA Homework3 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW4.pdf" class="button">ENA Homework4 Solutions</a><br/><br/></p>
-                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW5.pdf" class="button">ENA Homework5 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_Extra_Info.pdf" class="button">ENA Useful Information</a> <a href="documents/ENA_Solutions/ENA_Fahimi_Extra_Info2.pdf" class="button">ENA More Useful Information</a><br/><br/></p>
+                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW1&2.pdf" class="button">ENA Homework1&2 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW3.pdf" class="button">ENA Homework3 Solutions</a><br/><br/></p>
+                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW4.pdf" class="button">ENA Homework4 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW5.pdf" class="button">ENA Homework5 Solutions</a> <br/><br/></p>
+                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_Extra_Info.pdf" class="button">ENA Useful Information</a> <a href="documents/ENA_Solutions/ENA_Fahimi_Extra_Info2.pdf" class="button">ENA More Useful Information</a></p>
                     <h3>Integrated Circuit Technology</h3>
                     <p>This is for the extra credit lab assigned to the students of Dr. Chadwin Young's ICT class.</p>
                     <p><a href="documents/Integrated_Circuit_Technology/SRIM_Setup.zip" class="button">SRIM & Dependences</a><br/><br/></p>
@@ -152,17 +153,10 @@
                     <!--<h1><b>HAPPY THANKSGIVING</b></h1>-->
                     <h2>JOIN US ON FACEBOOK</h2>
                     <!--<p><h3>From entire officer core of the IEEE UTD Student Chapter. We wish you a happy thanksgiving break. We are working on setting up review session for several classes on the week after the break.</span></h3></p>-->
-                    <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
-                      <div class="responsive-wrapper
-                         responsive-wrapper-wxh-572x612"
-                         style="-webkit-overflow-scrolling: touch; overflow: auto;">
-                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FIEEEUTD%2F&tabs=timeline&width=500&height=570&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="500" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true">
-                          <p style="font-size: 110%;"><em><strong>ERROR: </strong>
-                            An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
-                        </iframe>
-
-                      </div>
-                    </div>
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FIEEEUTD%2F&tabs=timeline&width=350&height=540&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="350" height="540" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true">
+                      <p style="font-size: 110%;"><em><strong>ERROR: </strong>
+                        An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
+                    </iframe>
                     <!--p><h4><b><span>Dr. Khoubrouy's Signals Exam Review November 10th, 2016 at ECSN 2.110 from 7:30PM - 9PM.</span></b></h4></p>
                     <p></p-->
                     <!--p><span style="margin-left:2em">Dr. Fumagali's Signals Exam Review November 7th, 2016 at ECSN 2.203 from 7PM - 9PM.</span></p>
