removed some deadlinks

--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 header-text2">
+                    <div class="col-md-6 header-text2">
                         <h2><a href="#">Need help with classes?</a></h2>
                         <p><a href="Tutoring_Hours.html" class="button">Take a look at our tutoring hours ><a></p>
                     </div>
-                    <div class="col-md-4 header-text3">
+                    <!--div class="col-md-4 header-text3">
                         <h2><a href="#">Bored and want something to do?</a></h2>
                         <p><a href="#" class="button">Take a look at our upcoming events ><a></p>
-                    </div>
-                    <div class="col-md-4 header-text4">
+                    </div-->
+                    <div class="col-md-6 header-text4">
                         <h2><a href="#">Want to be a tutor?</a></h2>
                         <p>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdjeXOgpjXdild4KDvcN-OVXevRbzQpzLoqFenE2fjrmRhV_A/viewform" class="button">Sign up here >
