added some contact information.
~Abhi

--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
                     <h3>Integrated Circuit Technology</h3>
                     <p>This is for the extra credit lab assigned to the students of Dr. Chadwin Young's ICT class.</p>
                     <p><a href="documents/Integrated_Circuit_Technology/SRIM_Setup.zip" class="button">SRIM & Dependences</a><br/><br/></p>
-                    <p> If you are experiencing issues accessing the pdfs, please clear your browser cash and try again. If you issue persists, please email our webmaster ieeeUTD@gmail.com.</p>
+                    <p> If you are experiencing issues accessing the pdfs or viewing the latest information, please clear your browser's cash and try again. If you issue persists, please email our webmaster:</p>
+                    <p><a href= "cxf160330@utdallas.edu" class="button">Caleb Fung</a></p>
                 </div>
                 <div class="upcoming_events">
                     <!--<h1><b>HAPPY THANKSGIVING</b></h1>-->
