--- a/Tutoring_Hours.html
+++ b/Tutoring_Hours.html
@@ -99,12 +99,14 @@
               <ul class="nav nav-tabs responsive" id="myTab">
                 <li class="test-class"><a class="deco-none red-class" href="#resp-tab1">EE/CE 2310</a></li>
                 <li class="test-class"><a href="#resp-tab2">EE/CE 3301</a></li>
-                <li><a class="deco-none" href="#resp-tab3">EE/CE 3320</a></li>
+                <li class="test-class"><a href="#resp-tab3">EE/CE 3302</a></li>
+                <li class="test-class"><a href="#resp-tab4">EE/CE 3310</a></li>
+                <li class="test-class"><a href="#resp-tab5">EE/CE 3311</a></li>
+                <li><a class="deco-none" href="#resp-tab6">EE/CE 3320</a></li>
               </ul>
 
               <div class="tab-content responsive">
                 <div class="tab-pane active" id="resp-tab1">
-
                   <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
                     <div class="responsive-wrapper
                        responsive-wrapper-wxh-572x612"
@@ -113,13 +115,10 @@
                         <p style="font-size: 110%;"><em><strong>ERROR: </strong>
                           An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
                       </iframe>
-
                     </div>
                   </div>
-
                 </div>
                 <div class="tab-pane" id="resp-tab2">
-
                   <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
                     <div class="responsive-wrapper
                        responsive-wrapper-wxh-572x612"
@@ -128,13 +127,46 @@
                         <p style="font-size: 110%;"><em><strong>ERROR: </strong>
                           An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
                       </iframe>
-
                     </div>
                   </div>
-
                 </div>
                 <div class="tab-pane" id="resp-tab3">
-
+                  <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
+                    <div class="responsive-wrapper
+                       responsive-wrapper-wxh-572x612"
+                       style="-webkit-overflow-scrolling: touch; overflow: auto;">
+                      <iframe src="https://docs.google.com/file/d/0B8-xiQtRtsfENVJwcmM3Q3V0OTg/preview">
+                        <p style="font-size: 110%;"><em><strong>ERROR: </strong>
+                          An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
+                      </iframe>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-pane" id="resp-tab4">
+                  <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
+                    <div class="responsive-wrapper
+                       responsive-wrapper-wxh-572x612"
+                       style="-webkit-overflow-scrolling: touch; overflow: auto;">
+                      <iframe src="https://docs.google.com/file/d/0B8-xiQtRtsfESklfVXNWLVdrbFk/preview">
+                        <p style="font-size: 110%;"><em><strong>ERROR: </strong>
+                          An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
+                      </iframe>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-pane" id="resp-tab5">
+                  <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
+                    <div class="responsive-wrapper
+                       responsive-wrapper-wxh-572x612"
+                       style="-webkit-overflow-scrolling: touch; overflow: auto;">
+                      <iframe src="https://docs.google.com/file/d/0B8-xiQtRtsfEVUV0d3lxT252N3M/preview">
+                        <p style="font-size: 110%;"><em><strong>ERROR: </strong>
+                          An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
+                      </iframe>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-pane" id="resp-tab6">
                   <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
                     <div class="responsive-wrapper
                        responsive-wrapper-wxh-572x612"
@@ -143,11 +175,10 @@
                         <p style="font-size: 110%;"><em><strong>ERROR: </strong>
                           An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
                       </iframe>
-
                     </div>
                   </div>
-
                 </div>
+
               </div>
           </div>
 
