--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <h3>Integrated Circuit Technology</h3>
                     <p>This is for the extra credit lab assigned to the students of Dr. Chadwin Young's ICT class.</p>
                     <p><a href="documents/Integrated_Circuit_Technology/SRIM_Setup.zip" class="button">SRIM & Dependences</a><br/><br/></p>
-                     <p> If you are experiencing issues on the website or have any suggestions, <b>let us know</b> via <a href= "mailto:ieeeutd@gmail.com?Subject=IEEE%20Website%20Suggestions" class="button">email!</a></p>
+                     <p> If you are experiencing issues on the website or have any suggestions, <b>let us know</b> via <a href= "mailto:ieeeutd@gmail.com?Subject=IEEE%20Website%20Suggestions" class="button">email.</a></p>
 		    <!--
 		    <p> If you are experiencing issues accessing the pdfs or viewing the latest information, please clear your browser's cache and try again. If you issue persists, please email our webmaster:</p>
                     <p><a href= "mailto:caleb.fung@utdallas.edu?Subject=IEEE%20Webdev" class="button">Caleb Fung</a></p>
