--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- /.container -->
  	</nav>
 
-    <artcle>
+    <article>
     <div class= "row container2">
             <div class="col-lg-12 sb-page-header">
                 <div>
@@ -88,15 +88,15 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 header-text2">
+                    <div class="col-md-4 header-text2">
                         <h2><a href="#">Need help with classes?</a></h2>
                         <p><a href="Tutoring_Hours.html" class="button">Take a look at our tutoring hours ><a></p>
                     </div>
-                    <!--div class="col-md-4 header-text3">
+                    <div class="col-md-4 header-text3">
                         <h2><a href="#">Bored and want something to do?</a></h2>
                         <p><a href="#" class="button">Take a look at our upcoming events ><a></p>
-                    </div-->
-                    <div class="col-md-6 header-text4">
+                    </div>
+                    <div class="col-md-4 header-text4">
                         <h2><a href="#">Want to be a tutor?</a></h2>
                         <p>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdjeXOgpjXdild4KDvcN-OVXevRbzQpzLoqFenE2fjrmRhV_A/viewform" class="button">Sign up here >
@@ -106,7 +106,7 @@
                 </div>
             </div>
     </div>
-    </artcle>
+  </article>
         <div class="row container3">
             <div class="col-lg-12 ">
                 <div class="quote-text">
@@ -132,6 +132,10 @@
             </div>
         </div>
     </article>
+    <div class="announcements">
+      <h2>ANNOUNCEMENTS</h2>
+      <p>The DC exam review for Dr. Balsara's class will be from 7:00-9:00PM today (2/27) in ECSN 1.126.</p>
+    </div>
     <article>
         <div class ="row container5">
             <div class="col-lg-12">
@@ -140,17 +144,14 @@
                     <!--h2>CLASS CORNER</h2-->
 
                     <p><b>Note:</b> These solutions are for review purposes only. The solutions represent one way to solve the problems and the point of these solutions is to provide better understanding of the concepts. If you are utilizing these solutions solely for the answers, you are missing the point. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com. Please be specific on why you feel an answer may be wrong.<br/></p>
-                    <h3>Electrical Network Analysis </h3>
-                    <p><a href="documents/ENA_Solutions/Fall2016.zip" class="button">Fahimi_Fall_2016</a> <a href="documents/ENA_Solutions/Helms_HW_Prob.pdf" class="button">Helms HW Problems</a><br/><br/></p>
-                    
+                    <h3>Electrical Network Analysis</h3>
+                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW1&2.pdf" class="button">ENA Homework1&2 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW3.pdf" class="button">ENA Homework3 Solutions</a><br/><br/></p>
+                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW4.pdf" class="button">ENA Homework4 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW5.pdf" class="button">ENA Homework5 Solutions</a> <br/><br/></p>
+                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_Extra_Info.pdf" class="button">ENA Useful Information</a> <a href="documents/ENA_Solutions/ENA_Fahimi_Extra_Info2.pdf" class="button">ENA More Useful Information</a></p>
                     <h3>Integrated Circuit Technology</h3>
                     <p>This is for the extra credit lab assigned to the students of Dr. Chadwin Young's ICT class.</p>
                     <p><a href="documents/Integrated_Circuit_Technology/SRIM_Setup.zip" class="button">SRIM & Dependences</a><br/><br/></p>
-                     <p> If you are experiencing issues on the website or have any suggestions, <b>let us know</b> via <a href= "mailto:ieeeutd@gmail.com?Subject=IEEE%20Website%20Suggestions" class="button">email.</a></p>
-		    <!--
-		    <p> If you are experiencing issues accessing the pdfs or viewing the latest information, please clear your browser's cache and try again. If you issue persists, please email our webmaster:</p>
-                    <p><a href= "mailto:caleb.fung@utdallas.edu?Subject=IEEE%20Webdev" class="button">Caleb Fung</a></p>
-		    -->
+                    <p> If you are experiencing issues accessing the pdfs, please clear your browser cash and try again. If you issue persists, please email our webmaster ieeeUTD@gmail.com.</p>
                 </div>
                 <div class="upcoming_events">
                     <!--<h1><b>HAPPY THANKSGIVING</b></h1>-->
