--- a/Tutoring_Hours.html
+++ b/Tutoring_Hours.html
@@ -82,7 +82,7 @@
                 <div class="Digital_System_Section">
                     <div class="title_section">
                         <h3>
-                            <br/>If you are interested in tutoring, please contact <a href="mailto:jasonpwaye@gmail.com?Subject=IEEE%20Tutoring">Jason Waye</a>.
+                            <br/>If you are interested in tutoring, please contact <a href="mailto:Jason.Waye@utdallas.edu?Subject=IEEE%20Tutoring">Jason Waye</a>.
                         </h3>
                     </div>
                 </div>
