Fix links and add mirrors

--- a/Tutoring_Hours.html
+++ b/Tutoring_Hours.html
@@ -108,10 +108,11 @@
               <div class="tab-content responsive">
                 <div class="tab-pane active" id="resp-tab1">
                   <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
+                    <a href="https://www.dropbox.com/s/40b5bh2j0d5xile/EE_CE%202310%20Tutoring%20Schedule%2017S%20%281%29.pdf?dl=1"><strong>Mirror</strong> (downloads .pdf file)</a>
                     <div class="responsive-wrapper
                        responsive-wrapper-wxh-572x612"
                        style="-webkit-overflow-scrolling: touch; overflow: auto;">
-                      <iframe src="https://docs.google.com/file/d/0B8-xiQtRtsfEa1pOM0xoYlVXcXM/preview">
+                      <iframe id="iFrame1" src="https://drive.google.com/file/d/0B8-xiQtRtsfEWUNxSXA1TmR5QlE/preview">
                         <p style="font-size: 110%;"><em><strong>ERROR: </strong>
                           An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
                       </iframe>
@@ -120,10 +121,11 @@
                 </div>
                 <div class="tab-pane" id="resp-tab2">
                   <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
+                    <a href="https://www.dropbox.com/s/tq9dka3qvr0sg11/EE_CE%203301%20Tutoring%20Schedule%2017S%20%281%29.pdf?dl=1"><strong>Mirror</strong> (downloads .pdf file)</a>
                     <div class="responsive-wrapper
                        responsive-wrapper-wxh-572x612"
                        style="-webkit-overflow-scrolling: touch; overflow: auto;">
-                      <iframe src="https://docs.google.com/file/d/0B8-xiQtRtsfETlo3V29OamFkX00/preview">
+                      <iframe src="https://drive.google.com/file/d/0B8-xiQtRtsfEM1RDM2tjRWVMZVU/preview">
                         <p style="font-size: 110%;"><em><strong>ERROR: </strong>
                           An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
                       </iframe>
@@ -132,10 +134,11 @@
                 </div>
                 <div class="tab-pane" id="resp-tab3">
                   <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
+                    <a target="_blank" href="https://www.dropbox.com/s/40b5bh2j0d5xile/EE_CE%202310%20Tutoring%20Schedule%2017S%20%281%29.pdf?dl=0"><strong>Mirror</strong> (downloads .pdf file)</a>
                     <div class="responsive-wrapper
                        responsive-wrapper-wxh-572x612"
                        style="-webkit-overflow-scrolling: touch; overflow: auto;">
-                      <iframe src="https://docs.google.com/file/d/0B8-xiQtRtsfENVJwcmM3Q3V0OTg/preview">
+                      <iframe src="https://drive.google.com/file/d/0B8-xiQtRtsfEQm9FVWZ2N1JYVWs/preview">
                         <p style="font-size: 110%;"><em><strong>ERROR: </strong>
                           An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
                       </iframe>
@@ -144,10 +147,11 @@
                 </div>
                 <div class="tab-pane" id="resp-tab4">
                   <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
-                    <div class="responsive-wrapper
+                  <a href="https://www.dropbox.com/s/fb8glcbvxy5u7kj/EE_CE%203310%20Tutoring%20Schedule%2017S%20%281%29.pdf?dl=1"><strong>Mirror</strong> (downloads .pdf file)</a>
+                  <div class="responsive-wrapper
                        responsive-wrapper-wxh-572x612"
                        style="-webkit-overflow-scrolling: touch; overflow: auto;">
-                      <iframe src="https://docs.google.com/file/d/0B8-xiQtRtsfESklfVXNWLVdrbFk/preview">
+                      <iframe src="https://drive.google.com/file/d/0B8-xiQtRtsfEYktPSU1FcXJyTVU/preview">
                         <p style="font-size: 110%;"><em><strong>ERROR: </strong>
                           An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
                       </iframe>
@@ -156,10 +160,11 @@
                 </div>
                 <div class="tab-pane" id="resp-tab5">
                   <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
+                    <a href="https://www.dropbox.com/s/8dwpgj4qmlj2rto/EE_CE%203311%20Tutoring%20Schedule%2017S%20%281%29.pdf?dl=1"><strong>Mirror</strong> (downloads .pdf file)</a>
                     <div class="responsive-wrapper
                        responsive-wrapper-wxh-572x612"
                        style="-webkit-overflow-scrolling: touch; overflow: auto;">
-                      <iframe src="https://docs.google.com/file/d/0B8-xiQtRtsfEVUV0d3lxT252N3M/preview">
+                      <iframe src="https://drive.google.com/file/d/0B8-xiQtRtsfEeTgyZFpMTXlmN2c/preview">
                         <p style="font-size: 110%;"><em><strong>ERROR: </strong>
                           An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
                       </iframe>
@@ -168,10 +173,11 @@
                 </div>
                 <div class="tab-pane" id="resp-tab6">
                   <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
+                    <a href="https://www.dropbox.com/s/86eb9bz28ovhsnk/EE_CE%203320%20Tutoring%20Schedule%2017S%20%281%29.pdf?dl=1"><strong>Mirror</strong> (downloads .pdf file)</a>
                     <div class="responsive-wrapper
                        responsive-wrapper-wxh-572x612"
                        style="-webkit-overflow-scrolling: touch; overflow: auto;">
-                      <iframe src="https://docs.google.com/file/d/0B8-xiQtRtsfESzA0Ul91NXNUWFk/preview">
+                      <iframe src="https://drive.google.com/file/d/0B8-xiQtRtsfEcmYzOEY1SXhNcW8/preview">
                         <p style="font-size: 110%;"><em><strong>ERROR: </strong>
                           An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
                       </iframe>
@@ -198,6 +204,7 @@
     <script src="js/bootstrap.min.js"></script>
 
     <script src="js/responsive-tabs.js"></script>
+
     <script type="text/javascript">
 
       $( 'ul.nav.nav-tabs  a' ).click( function ( e ) {
