--- a/index.html
+++ b/index.html
@@ -147,11 +147,10 @@
                     <h3>Electrical Network Analysis</h3>
                     <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW1&2.pdf" class="button">ENA Homework1&2 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW3.pdf" class="button">ENA Homework3 Solutions</a><br/><br/></p>
                     <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW4.pdf" class="button">ENA Homework4 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW5.pdf" class="button">ENA Homework5 Solutions</a> <br/><br/></p>
-                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_Extra_Info.pdf" class="button">ENA Useful Information</a> <a href="documents/ENA_Solutions/ENA_Fahimi_Extra_Info2.pdf" class="button">ENA More Useful Information</a></p>
-                    <a href="documents/ENA_Solutions/ENA_Fahimi_Extra_Info2.pdf" class="button">ENA More Useful Information</a></p>
+                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_Extra_Info.pdf" class="button">ENA Useful Information</a> <a href="documents/ENA_Solutions/ENA_Fahimi_Extra_Info2.pdf" class="button">ENA More Useful Information</a><br/><br/></p>
+                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_Extra_Info2.pdf" class="button">ENA More Useful Information</a> <a href="documents/signals/signalsInfo.pdf" class="button">Signals Info</a><br/><br/></p>
                     <h3>Integrated Circuit Technology</h3>
-                    <p>This is for the extra credit lab assigned to the students of Dr. Chadwin Young's ICT class.</p><br/>
-                    <p><a href="documents/signals/signalsInfo.pdf" class="button">Signals Info</a><br/><br/></p>
+                    <p>This is for the extra credit lab assigned to the students of Dr. Chadwin Young's ICT class.</p>
                     <p> If you are experiencing issues accessing the pdfs, please clear your browser cash and try again. If you issue persists, please email our webmaster ieeeUTD@gmail.com.</p>
                 </div>
                 <div class="upcoming_events">
