Update announcements sections

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
             </div>
         </div>
     </article>
-    <div class="announcements">
+    <!--<div class="announcements">
       <h2>ANNOUNCEMENTS</h2>
-      <p>The DC exam review for Dr. Balsara's class will be from 7:00-9:00PM today (2/27) in ECSN 1.126.</p>
+      <p>The DC exam review for Dr. Balsara's class will be from 7:00-9:00PM today (2/27) in ECSN 1.126.</p>-->
     </div>
     <article>
         <div class ="row container5">
