--- a/Tutoring_Hours.html
+++ b/Tutoring_Hours.html
@@ -108,11 +108,11 @@
               <div class="tab-content responsive">
                 <div class="tab-pane active" id="resp-tab1">
                   <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
-                    <a href="https://www.dropbox.com/s/40b5bh2j0d5xile/EE_CE%202310%20Tutoring%20Schedule%2017S%20%281%29.pdf?dl=1"><strong>Mirror</strong> (downloads .pdf file)</a>
+                    <a href="https://www.dropbox.com/s/kc65x9u8phlicjm/EE_CE%203302%20Tutoring%20Schedule%2017S%20V2.pdf?dl=1"><strong>Mirror</strong> (downloads .pdf file)</a>
                     <div class="responsive-wrapper
                        responsive-wrapper-wxh-572x612"
                        style="-webkit-overflow-scrolling: touch; overflow: auto;">
-                      <iframe id="iFrame1" src="https://drive.google.com/file/d/0B8-xiQtRtsfEWUNxSXA1TmR5QlE/preview">
+                      <iframe id="iFrame1" src="https://drive.google.com/file/d/0B7x4W3NmMj3Fb3pLSWd4RE1KZ3c/preview">
                         <p style="font-size: 110%;"><em><strong>ERROR: </strong>
                           An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
                       </iframe>
@@ -134,11 +134,11 @@
                 </div>
                 <div class="tab-pane" id="resp-tab3">
                   <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
-                    <a target="_blank" href="https://www.dropbox.com/s/40b5bh2j0d5xile/EE_CE%202310%20Tutoring%20Schedule%2017S%20%281%29.pdf?dl=0"><strong>Mirror</strong> (downloads .pdf file)</a>
+                    <a target="_blank" href="https://www.dropbox.com/s/kc65x9u8phlicjm/EE_CE%203302%20Tutoring%20Schedule%2017S%20V2.pdf?dl=1"><strong>Mirror</strong> (downloads .pdf file)</a>
                     <div class="responsive-wrapper
                        responsive-wrapper-wxh-572x612"
                        style="-webkit-overflow-scrolling: touch; overflow: auto;">
-                      <iframe src="https://drive.google.com/file/d/0B8-xiQtRtsfEQm9FVWZ2N1JYVWs/preview">
+                      <iframe src="https://drive.google.com/file/d/0B7x4W3NmMj3FTjNqMGF0dGNudUU/preview">
                         <p style="font-size: 110%;"><em><strong>ERROR: </strong>
                           An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
                       </iframe>
@@ -147,11 +147,11 @@
                 </div>
                 <div class="tab-pane" id="resp-tab4">
                   <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
-                  <a href="https://www.dropbox.com/s/fb8glcbvxy5u7kj/EE_CE%203310%20Tutoring%20Schedule%2017S%20%281%29.pdf?dl=1"><strong>Mirror</strong> (downloads .pdf file)</a>
+                  <a href="https://www.dropbox.com/s/hb4wn4s7qypdr1t/EE_CE%203310%20Tutoring%20Schedule%2017S%20V2.pdf?dl=1"><strong>Mirror</strong> (downloads .pdf file)</a>
                   <div class="responsive-wrapper
                        responsive-wrapper-wxh-572x612"
                        style="-webkit-overflow-scrolling: touch; overflow: auto;">
-                      <iframe src="https://drive.google.com/file/d/0B8-xiQtRtsfEYktPSU1FcXJyTVU/preview">
+                      <iframe src="https://drive.google.com/file/d/0B7x4W3NmMj3FSHhiYjI0TGVmeEk/preview">
                         <p style="font-size: 110%;"><em><strong>ERROR: </strong>
                           An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
                       </iframe>
@@ -173,11 +173,11 @@
                 </div>
                 <div class="tab-pane" id="resp-tab6">
                   <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
-                    <a href="https://www.dropbox.com/s/86eb9bz28ovhsnk/EE_CE%203320%20Tutoring%20Schedule%2017S%20%281%29.pdf?dl=1"><strong>Mirror</strong> (downloads .pdf file)</a>
+                    <a href="https://www.dropbox.com/s/3b80t3n58ixl96n/EE_CE%203320%20Tutoring%20Schedule%2017S%20V2.pdf?dl=1"><strong>Mirror</strong> (downloads .pdf file)</a>
                     <div class="responsive-wrapper
                        responsive-wrapper-wxh-572x612"
                        style="-webkit-overflow-scrolling: touch; overflow: auto;">
-                      <iframe src="https://drive.google.com/file/d/0B8-xiQtRtsfEcmYzOEY1SXhNcW8/preview">
+                      <iframe src="https://drive.google.com/file/d/0B7x4W3NmMj3FekYwRFQxV0haN1U/preview">
                         <p style="font-size: 110%;"><em><strong>ERROR: </strong>
                           An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
                       </iframe>
